wip permissions before reset to simpler
