# crates/abyssal/src/routes/misc.rs
@@ -1,4 +1,6 @@
 
+use std::path::PathBuf;
+
 use okapi::openapi3::OpenApi;
 use rocket::{State, get, serde::json::Json};
 use rocket_okapi::{JsonSchema, openapi};
@@ -25,10 +27,17 @@ async fn get_info_permissions() -> Json<PermissionsDescription> {
     Json(Permissions::describe())
 }
 
+#[openapi]
+#[get("/info/permissions/<path..>")]
+async fn get_info_permissions_at_path(path: PathBuf) -> Json<Option<PermissionsDescription>> {
+    let path = path.to_string_lossy().to_string();
+    Json(Permissions::describe().at_path(path))
+}
+
 #[openapi(skip)]
 #[get("/doc/openapi.json")]
 async fn get_openapi_json(spec: &State<OpenApi>) -> Json<OpenApi> {
     Json(spec.inner().clone())
 }
 
-export_routes![get_info, get_openapi_json, get_info_permissions];
+export_routes![get_info, get_openapi_json, get_info_permissions, get_info_permissions_at_path];
